@@ -79,7 +79,7 @@ public:
     size_t getCollectionSize();
     unsigned int getSelectedIndex();
     void selectRandom();
-    void selectRandomPlaylist(CollectionInfo* collection);
+    void selectRandomPlaylist(CollectionInfo* collection, std::vector<std::string> cycleVector);
     void start();
     void stop();
     void setCurrentLayout(int layout);
